# advent-of-code-2024

./: .gitignore  README.md  pyproject.toml
aoc2024/common/: grid.py  grid_test.py  input.py  priority_queue.py  test.py
aoc2024/puzzles/: day00.py  day00_test.py  day01.py  day01_test.py  day02.py  day02_test.py  day03.py  day03_test.py  day04.py  day04_test.py  day05.py  day05_test.py  day06.py  day06_test.py  day07.py  day07_test.py  day08.py  day08_test.py  day09.py  day09_test.py  day10.py  day10_test.py  day11.py  day11_test.py  day12.py  day12_test.py  day13.py  day13_test.py  day14.py  day14_part2.py  day14_test.py  day15.py  day15_test.py  day16.py  day16_test.py  day17.py  day17_dissassemble.txt  day17_test.py  day18.py  day18_test.py  (+18 more)
