[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Dallon Feldner <dallonfdev@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
