[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Dallon Feldner <dallonfdev@gmail.com>"]
readme = "README.md"
package-mode = false
packages = [{ include = "src" }]

[tool.poetry.dependencies]
python = "^3.13"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-watch = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["aoc2024"]
strict = ["aoc2024"]

[tool.pytest.ini_options]
python_files = "*_test.py"
